group 'scge.mcw.edu'
version ''

apply plugin: 'java'
apply plugin: 'war'


sourceCompatibility = 17

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
    implementation fileTree(dir: 'lib', include: '*.jar')

    implementation 'commons-io:commons-io:2.14.0'
    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
    implementation group: 'com.mortennobel', name: 'java-image-scaling', version: '0.8.4'

    implementation("org.springframework:spring-core:6.2.7")
    implementation("org.springframework:spring-context:6.2.7")
    implementation("org.springframework:spring-web:6.2.7")
    implementation("org.springframework:spring-beans:6.2.7")
    implementation("org.springframework:spring-webmvc:6.2.7")
    implementation("org.springframework:spring-jdbc:6.2.7")

    implementation("org.springframework.security:spring-security-core:6.5.0")
    implementation("org.springframework.security:spring-security-web:6.5.0")
    implementation("org.springframework.security:spring-security-config:6.5.0")
    implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.5.2.RELEASE'
    implementation("org.springframework.security:spring-security-oauth2-client:6.5.0")
    implementation("org.springframework.security:spring-security-oauth2-jose:6.5.0")

    implementation 'com.google.api-client:google-api-client:1.30.2'
    implementation group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.33.3'

    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'

    implementation 'com.sun.mail:jakarta.mail:2.0.1'
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
    compileOnly 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.1'
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'
    implementation 'jakarta.xml.ws:jakarta.xml.ws-api:4.0.0'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.3'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4.2'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.15.2'

    implementation group: 'jexcelapi', name: 'jxl', version: '2.4.2'

    implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.17.4'
    implementation group: 'org.elasticsearch.client', name: 'transport', version: '7.17.4'
    implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-client', version: '7.17.4'
    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.4'
    implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.2.0'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
    implementation 'org.json:json:20240303'

}
tasks.withType(JavaCompile) {
    options.compilerArgs.add('-parameters')
}
task add_properties(type:Copy){
 from file("../../Apps/application.properties")
//  from file("/data/properties/application.properties")
 //   into file("/src/main/resources/")
    into file("/resources")
}
task update_scgecore(type:Copy){
    from file("../scge-core/build/libs/scge-core-1.0.jar")
    into file("lib/")

}

